apps/notes/memos/base/memos-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:stable
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  selector:
    app: memos
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
