apps/notes/memos/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos
  namespace: memos
spec:
  parentRefs:
    - name: main
      namespace: traefik
      sectionName: http
  hostnames:
    - memos.beeslab.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: memos
          port: 8080
